testsuite/tests/tool-ocamlopt-disable-builtin-check/builtin_check_enabled_by_default.compilers.reference
File "builtin_check_enabled_by_default.ml", line 14, characters 12-17:
14 |   print_int (p 1);
                 ^^^^^
Error: External annotated with [@@builtin] is not recognized: "test_stubs_identity"
